--- a/package.json
+++ b/package.json
@@ -2,18 +2,19 @@
   "name": "crypto-lifeguard-demo",
   "version": "1.0.0",
   "private": true,
-  "type": "module",
   "scripts": {
-    "dev": "concurrently -k \"node server.js\" \"vite\"",
+    "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview --port 5173",
-    "start": "node server.js"
+    "start": "node server.js",
+    "preview": "vite preview --host"
   },
   "dependencies": {
     "express": "^4.19.2"
   },
   "devDependencies": {
-    "concurrently": "^8.2.2",
     "vite": "^5.4.20"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
