--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview --host"
   },
   "dependencies": {
+    "better-sqlite3": "^12.4.1",
+    "cookie-parser": "^1.4.7",
     "express": "^4.19.2"
   },
   "devDependencies": {
