--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "vite",
     "build": "vite build",
     "start": "node server.js",
-    "preview": "vite preview --host"
+    "preview": "vite preview --host",
+    "migrate": "node migrate.js",
+    "backup": "node backup.js"
   },
   "dependencies": {
     "better-sqlite3": "^12.4.1",
