--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "start": "node server.js",
+    "start": "node migrate.js && node server.js",
     "preview": "vite preview --host",
     "migrate": "node migrate.js",
     "backup": "node backup.js"
