--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "start": "node migrate.js && node server.js",
+    "start": "node migrate.js && node update-tags.js && node server.js",
     "preview": "vite preview --host",
     "migrate": "node migrate.js",
-    "backup": "node backup.js"
+    "backup": "node backup.js",
+    "update-tags": "node update-tags.js"
   },
   "dependencies": {
     "better-sqlite3": "^12.4.1",
