--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "better-sqlite3": "^12.4.1",
     "cookie-parser": "^1.4.7",
+    "dotenv": "^17.2.3",
     "express": "^4.19.2"
   },
   "devDependencies": {
