--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,15 @@ dist
 dist-ssr
 *.local
 
+# Environment files
+.env
+.env.local
+.env.production
+.env.staging
+
+# Data directory (local development)
+data/
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
