Market: switch to CoinMarketCap (CMC), add caching & GBP convert; .env.example docs; Polygon as fallback

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,8 @@ GOOGLE_CLIENT_SECRET=your_google_client_secret_here
 # These are automatically set in production, no need to uncomment:
 # DATA_DIR=/data
 # RAILWAY_VOLUME_MOUNT=/data
+
+# Market data configuration
+# Use CoinMarketCap for live price snapshots (preferred). If not set, server falls back to Polygon EOD when POLYGON_API_KEY is present.
+# CMC_API_KEY=your_cmc_api_key_here
+# MARKET_CURRENCY=GBP
