--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,6 @@ GOOGLE_CLIENT_SECRET=your_google_client_secret_here
 # RAILWAY_VOLUME_MOUNT=/data
 
 # Market data configuration
-# Use CoinMarketCap for live price snapshots (preferred). If not set, server falls back to Polygon EOD when POLYGON_API_KEY is present.
+# Use CoinMarketCap for live price snapshots.
 # CMC_API_KEY=your_cmc_api_key_here
 # MARKET_CURRENCY=GBP
