--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,6 @@ GOOGLE_CLIENT_SECRET=your_google_client_secret_here
 # Use CoinMarketCap for live price snapshots.
 # CMC_API_KEY=your_cmc_api_key_here
 # MARKET_CURRENCY=GBP
+
+# LogoKit API for crypto token icons
+# LOGOKIT_API_KEY=your_logokit_api_key_here
