--- a/.env.example
+++ b/.env.example
@@ -16,5 +16,13 @@ GOOGLE_CLIENT_SECRET=your_google_client_secret_here
 # CMC_API_KEY=your_cmc_api_key_here
 # MARKET_CURRENCY=GBP
 
+# News API Configuration
+# CoinDesk API for cryptocurrency news (preferred)
+# COINDESK=your_coindesk_api_key_here
+# COINDESK_API_URL=https://www.coindesk.com/arc/outboundfeeds/news
+
+# CryptoNews API (fallback)
+# NEWSAPI_KEY=your_cryptonews_api_key_here
+
 # LogoKit API for crypto token icons
 # LOGOKIT_API_KEY=your_logokit_api_key_here
