Complete backend migration to CLG-ADMIN
BREAKING CHANGE: Backend moved from apps/backend to apps/admin

Changes:
- Deleted apps/backend/ directory (backend now in apps/admin/)
- Removed apps/backend from package.json workspaces
- Removed backend-related npm scripts (dev:backend, start:backend, migrate)
- Deleted railway.toml (was for old backend service)
- Updated package-lock.json

Architecture:
- CLG-DEPLOY service: Main user-facing app (root index.html, app.js)
- CLG-ADMIN service: Admin panel + Backend API (apps/admin/)

Both services now deploy independently with correct build configs.

--- a/package.json
+++ b/package.json
@@ -1,22 +1,17 @@
 {
   "name": "crypto-lifeguard",
   "version": "1.0.0",
-  "description": "Crypto Lifeguard - Monorepo for Admin Panel and Backend API",
+  "description": "Crypto Lifeguard - Main App and Admin Panel",
   "private": true,
   "workspaces": [
     "apps/admin",
-    "apps/backend",
     "packages/*"
   ],
   "scripts": {
     "dev": "vite",
     "dev:admin": "npm run dev --workspace=apps/admin",
-    "dev:backend": "npm run dev --workspace=apps/backend",
     "build": "vite build",
     "build:admin": "npm run build --workspace=apps/admin",
-    "build:backend": "echo 'No build step for backend'",
-    "start:backend": "npm run start --workspace=apps/backend",
-    "migrate": "npm run migrate --workspace=apps/backend",
     "install:all": "npm install",
     "clean": "rm -rf node_modules apps/*/node_modules packages/*/node_modules"
   },
