Add nixpacks config for CLG-DEPLOY static app
- Created nixpacks.toml at root for CLG-DEPLOY service
- Added 'serve' package to serve static build files
- Configures build: vite build -> dist/
- Configures start: serve dist on PORT

This fixes 'Could not find root directory: /apps/backend' error
Railway will now build from root directory instead of deleted apps/backend/

--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "install:all": "npm install",
     "clean": "rm -rf node_modules apps/*/node_modules packages/*/node_modules"
   },
+  "dependencies": {
+    "serve": "^14.2.5"
+  },
   "devDependencies": {
     "concurrently": "^8.2.2",
     "vite": "^5.4.20"
