Make apps/admin standalone package
- Removed apps/admin from root workspaces array
- Generated package-lock.json for apps/admin
- Fixed nixpacks.toml to use 'npm ci' instead of workspace install
- apps/admin now deploys independently on Railway

This fixes: npm error ENOENT /package.json
Root cause: Railway builds from apps/admin/ dir, cd ../.. went outside context

--- a/package.json
+++ b/package.json
@@ -1,17 +1,14 @@
 {
   "name": "crypto-lifeguard",
   "version": "1.0.0",
-  "description": "Crypto Lifeguard - Main App and Admin Panel",
+  "description": "Crypto Lifeguard - Main App",
   "private": true,
   "workspaces": [
-    "apps/admin",
     "packages/*"
   ],
   "scripts": {
     "dev": "vite",
-    "dev:admin": "npm run dev --workspace=apps/admin",
     "build": "vite build",
-    "build:admin": "npm run build --workspace=apps/admin",
     "install:all": "npm install",
     "clean": "rm -rf node_modules apps/*/node_modules packages/*/node_modules"
   },
