--- a/apps/admin/nixpacks.toml
+++ b/apps/admin/nixpacks.toml
@@ -2,7 +2,7 @@
 nixPkgs = ['nodejs_22']
 
 [phases.install]
-cmds = ['cd ../.. && npm ci --workspace=apps/admin']
+cmds = ['npm ci']
 
 [phases.build]
 cmds = ['npm run build']
