--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -8,7 +8,11 @@ nixPkgs = ["nodejs_22"]
 cmds = ["npm ci"]
 
 [phases.build]
-cmds = ["npm run build"]
+cmds = [
+  "npm run build",
+  "chmod +x inject-config.sh",
+  "./inject-config.sh"
+]
 
 [start]
 cmd = "npx serve dist -p ${PORT:-3000}"
