Fix Railway build: commit pre-built main app files
- Reverted package.json build script (admin only)
- Committed main-app-dist/ directory with pre-built main app
- Removed main-app-dist from .gitignore
- Reverted nixpacks.toml and railway.json to simple build

This fixes the Railway build error where it couldn't find the parent
package.json. The main app is now pre-built and committed, so the
backend can serve it without needing to build it during deployment.

--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -4,9 +4,7 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "npm run build:admin && npm run build:main-app",
-    "build:admin": "tsc -b && vite build",
-    "build:main-app": "cd ../.. && npm run build && mkdir -p apps/admin/main-app-dist && cp -R dist/* apps/admin/main-app-dist/",
+    "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview --host 0.0.0.0 --port ${PORT:-4173}",
     "start": "node migrate.js && node server.js",
