Pass BACKEND_URL to inject script during build
- Explicitly pass BACKEND_URL environment variable to inject-config.sh
- Ensures Railway's build-time env vars are accessible during injection

This fixes the issue where BACKEND_URL was set in Railway but not
available during the build phase.

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -11,7 +11,7 @@ cmds = ["npm ci"]
 cmds = [
   "npm run build",
   "chmod +x inject-config.sh",
-  "./inject-config.sh"
+  "BACKEND_URL=\"${BACKEND_URL:-}\" ./inject-config.sh"
 ]
 
 [start]
